# NileCAM21

./: control_manual_exposure.sh  control_sync_mode.sh  controls.py  init.sh  py_script.py  set_control.sh  set_exposure.sh  set_frame_sync.sh  set_gain.sh  set_gain2.sh  stream_on_off.sh  test.sh  test2.sh  test3.sh
conf/: conf.ini  conf_dual.ini  conf_with_trigger.ini
cpp/: CMakeLists.txt  sxpf-app.cpp
sh_examples/: control_denoise.sh  control_exposure_time.sh  control_gain.sh  control_hdr.sh  control_trigger.sh  control_white_balance.sh  get_mcu_version.sh  init_cam.sh
